<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/refresh_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/refresh_text"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/text"
            android:text="@string/refresh_text"
            android:textSize="18sp" />

        <Button
            android:id="@+id/refresh_btn"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/refresh_button_text" />

        <TextView
            android:id="@+id/sign_details"
            android:layout_width="225dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/sign_details"
            android:textColor="@color/sign_details_color"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>