<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:zjhc="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/remote_sign_bg"
    android:orientation="vertical">
  <!--  <com.android.hcframe.TopBarView
        android:id="@+id/feedback_top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_height"
        android:background="@color/topbar_bg"
        zjhc:topbar_return_visiable="true"
        zjhc:topbar_right_image_visiable="false"
        zjhc:topbar_title="签到" />-->
    <com.android.hcframe.TopBarView
        android:id="@+id/details_top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_height"
        android:background="@color/topbar_bg" />
    <!--<include android:id="@+id/title" layout="@layout/title"/>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/remote_sign"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/time_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:gravity="center"
                android:paddingTop="10dp"
                android:singleLine="true"
                android:text="@string/time"
                android:textColor="@color/text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:singleLine="true"
                android:text="9:03"
                android:textColor="@color/text"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/remote_sign"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/add_title"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
               android:gravity="center"
                android:singleLine="true"
                android:text="@string/add"
                android:textColor="@color/text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ellipsize="end"
                android:lineSpacingExtra="3dp"
                android:lines="2"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="杭州市滨江区伟业路1号高新软件园二号楼浙江鸿程"
                android:textColor="@color/text"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/text_add"
            android:textColor="@color/text_add_color"
            android:textSize="14sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:background="@color/remote_sign"
        android:gravity="left|top"
        android:hint="随便说几句......" />

    <GridView
        android:id="@+id/noScrollgridview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numColumns="3"
        android:scrollbars="none" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right" />

    <Button
        android:id="@+id/button_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_corners_bg"
        android:onClick="changeButtonColor"
        android:text="@string/submit"
        android:textColor="@color/text" />

</LinearLayout>